propagate level changes
address code smells